--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.adv-paper-reader-local
-productName: 对抗攻击论文阅读助手
+productName: kedong_pad_portable_check_front
 directories:
   buildResources: build
 files:
@@ -11,7 +11,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: 对抗攻击论文阅读助手
+  executableName: kedong_pad_portable_check_front
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
