--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "version": "0.0.1",
+  "version": "1.0.1",
+  "name": "kedong-pad-checker",
+  "description": "An application for checking Kedong portable pads.",
   "main": "./out/main/index.js",
   "author": "haoran li",
   "homepage": "https://electron-vite.org",
   "scripts": {
-    "format": "prettier --write .",
+    "format": "prettier -cd-write .",
     "lint": "eslint --cache .",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
