--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "axios": "^1.9.0",
     "electron-store": "8.1",
     "quasar": "^2.18.1",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
