--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -31,7 +31,7 @@ linux:
   target:
     - AppImage
 #    - snap
-    - deb
+#    - deb
   maintainer: electronjs.org
   category: Utility
 appImage:
